cleanup gradle build